# Amanogawa

./: .gitignore  README.md  jmdict.md  pyproject.toml
amanogawa/: categories.py  config.py  database.py  feature.py  loader.py  main.py  morphology.py  parser.py  syntax.py  translation.py  tts.py  utils.py
amanogawa/analyzer/: analyzer.py  lexicalizer.py
amanogawa/tokenizer/: _trie.py  analyzer.py  exceptions.py  fsm.py  tokenizer.py  util.py  word.py
docs/: notes.md
grammars/: japanese.fcfg
